k8s/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  type: NodePort
  selector:
    app: service-a
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
    nodePort: 30081
