k8s/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  type: ClusterIP
  selector:
    app: service-b
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
