k8s/service-a-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: blackcoord-external
  labels:
    app: service-a
spec:
  to:
    kind: Service
    name: service-a
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
